--- a/app.ui
+++ b/app.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>435</width>
-    <height>382</height>
+    <width>519</width>
+    <height>472</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,31 +22,16 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QWidget" name="head_widget" native="true">
-      <property name="maximumSize">
-       <size>
-        <width>16777215</width>
-        <height>80</height>
-       </size>
+     <widget class="QLabel" name="title">
+      <property name="styleSheet">
+       <string notr="true">font: 670 22pt &quot;Ubuntu Sans&quot;;</string>
       </property>
-      <layout class="QVBoxLayout" name="verticalLayout_2">
-       <property name="spacing">
-        <number>0</number>
-       </property>
-       <item>
-        <widget class="QLabel" name="title">
-         <property name="styleSheet">
-          <string notr="true">font: 670 22pt &quot;Ubuntu Sans&quot;;</string>
-         </property>
-         <property name="text">
-          <string>ScoreCraftr</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignmentFlag::AlignCenter</set>
-         </property>
-        </widget>
-       </item>
-      </layout>
+      <property name="text">
+       <string>ScoreCraftr</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignmentFlag::AlignCenter</set>
+      </property>
      </widget>
     </item>
     <item>
@@ -57,48 +42,62 @@
      </widget>
     </item>
     <item>
-     <widget class="QWidget" name="file_select_widget" native="true">
-      <layout class="QVBoxLayout" name="verticalLayout_3">
+     <widget class="QWidget" name="select_file_widget" native="true">
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>9</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
        <item>
-        <widget class="QWidget" name="select_file_widget" native="true">
-         <layout class="QHBoxLayout" name="horizontalLayout">
-          <item>
-           <widget class="QLabel" name="file_name">
-            <property name="text">
-             <string>TextLabel</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignmentFlag::AlignCenter</set>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="select_file_btn">
-            <property name="maximumSize">
-             <size>
-              <width>100</width>
-              <height>16777215</height>
-             </size>
-            </property>
-            <property name="text">
-             <string>Select File</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
+        <widget class="QLabel" name="file_name">
+         <property name="text">
+          <string>File: no file selected...</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
+         </property>
         </widget>
        </item>
        <item>
-        <widget class="QProgressBar" name="progress_bar">
-         <property name="value">
-          <number>50</number>
+        <widget class="QPushButton" name="select_file_btn">
+         <property name="maximumSize">
+          <size>
+           <width>110</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Select PDF</string>
+         </property>
+         <property name="icon">
+          <iconset theme="QIcon::ThemeIcon::DocumentOpen"/>
+         </property>
+         <property name="shortcut">
+          <string>Ctrl+N</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="process_pdf_btn">
+         <property name="maximumSize">
+          <size>
+           <width>120</width>
+           <height>16777215</height>
+          </size>
+         </property>
          <property name="text">
-          <string>Start Processing</string>
+          <string>Process PDF</string>
+         </property>
+         <property name="icon">
+          <iconset theme="QIcon::ThemeIcon::DocumentProperties"/>
+         </property>
+         <property name="shortcut">
+          <string>Return</string>
          </property>
         </widget>
        </item>
@@ -113,28 +112,53 @@
      </widget>
     </item>
     <item>
+     <widget class="QTextBrowser" name="instructions_label">
+      <property name="html">
+       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+hr { height: 1px; border-width: 0; }
+li.unchecked::marker { content: &quot;\2610&quot;; }
+li.checked::marker { content: &quot;\2612&quot;; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:500; font-style:normal;&quot;&gt;
+&lt;h3 style=&quot; margin-top:14px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:large; font-weight:700;&quot;&gt;How to Use This App&lt;/span&gt;&lt;/h3&gt;
+&lt;ol style=&quot;margin-top: 0px; margin-bottom: 0px; margin-left: 0px; margin-right: 0px; -qt-list-indent: 1;&quot;&gt;
+&lt;li style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;Select PDF File&lt;/span&gt;&lt;br /&gt;Click on the &lt;span style=&quot; font-weight:700;&quot;&gt;&amp;quot;Select PDF&amp;quot;&lt;/span&gt; button to upload your PDF document.&lt;/li&gt;
+&lt;li style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;Process the PDF&lt;/span&gt;&lt;br /&gt;After selecting the file, click &lt;span style=&quot; font-weight:700;&quot;&gt;&amp;quot;Process PDF&amp;quot;&lt;/span&gt; to extract the course data from the PDF.&lt;/li&gt;
+&lt;li style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;Choose the Data You Need&lt;/span&gt;&lt;br /&gt;Once the data is extracted, use the &lt;span style=&quot; font-weight:700;&quot;&gt;selection panel&lt;/span&gt; to pick the specific course information you want to export.&lt;/li&gt;
+&lt;li style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;Export to DOCX&lt;/span&gt;&lt;br /&gt;Click the &lt;span style=&quot; font-weight:700;&quot;&gt;&amp;quot;Export as DOCX&amp;quot;&lt;/span&gt; button to download your selected data as a Word document.&lt;/li&gt;&lt;/ol&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <widget class="QWidget" name="course_select_widget" native="true">
       <layout class="QVBoxLayout" name="verticalLayout_8">
        <property name="spacing">
         <number>0</number>
        </property>
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>9</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
        <item>
-        <widget class="QWidget" name="select_course_label_widget" native="true">
-         <layout class="QVBoxLayout" name="verticalLayout_9">
-          <item>
-           <widget class="QLabel" name="select_course_label">
-            <property name="styleSheet">
-             <string notr="true">font: 500 14pt &quot;Ubuntu&quot;;</string>
-            </property>
-            <property name="text">
-             <string>Select Course</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignmentFlag::AlignCenter</set>
-            </property>
-           </widget>
-          </item>
-         </layout>
+        <widget class="QLabel" name="select_course_label">
+         <property name="styleSheet">
+          <string notr="true">font: 500 14pt &quot;Ubuntu&quot;;</string>
+         </property>
+         <property name="text">
+          <string>Select Course</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
+         </property>
         </widget>
        </item>
        <item>
@@ -143,8 +167,11 @@
           <property name="spacing">
            <number>0</number>
           </property>
-          <property name="topMargin">
+          <property name="leftMargin">
            <number>0</number>
+          </property>
+          <property name="topMargin">
+           <number>3</number>
           </property>
           <property name="rightMargin">
            <number>0</number>
@@ -162,8 +189,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>388</width>
-               <height>64</height>
+               <width>499</width>
+               <height>68</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_11"/>
@@ -176,7 +203,13 @@
        <item>
         <widget class="QWidget" name="export_btn_widget" native="true">
          <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <property name="spacing">
+           <number>0</number>
+          </property>
           <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="topMargin">
            <number>9</number>
           </property>
           <property name="rightMargin">
@@ -200,14 +233,26 @@
           </item>
           <item>
            <widget class="QPushButton" name="export_as_docx_btn">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>30</height>
+             </size>
+            </property>
             <property name="maximumSize">
              <size>
-              <width>120</width>
+              <width>150</width>
               <height>16777215</height>
              </size>
             </property>
             <property name="text">
-             <string>Export as Docx</string>
+             <string>Export as DOCX</string>
+            </property>
+            <property name="icon">
+             <iconset theme="QIcon::ThemeIcon::DocumentSave"/>
+            </property>
+            <property name="shortcut">
+             <string>Ctrl+S</string>
             </property>
            </widget>
           </item>
@@ -217,7 +262,22 @@
       </layout>
      </widget>
     </item>
+    <item>
+     <widget class="Line" name="line_3">
+      <property name="orientation">
+       <enum>Qt::Orientation::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
    </layout>
+  </widget>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="layoutDirection">
+    <enum>Qt::LayoutDirection::LeftToRight</enum>
+   </property>
+   <property name="sizeGripEnabled">
+    <bool>true</bool>
+   </property>
   </widget>
  </widget>
  <resources/>
